# analysiswebserver

./: .env.example  .gitignore  PHASE1_SUMMARY.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  POSTGRESQL_SETUP.md  PROGRESS.md  README.md  docker-compose.yml
.claude/: settings.local.json
backend/: Dockerfile  init_db.sql  kill_port.py  pyproject.toml  run_migration.py  setup_db.py  start_frontend3.py  test_analysis_engine.py  test_api.py  test_e2e.py  verify_all.py
backend/analysis/: __init__.py  core.py
backend/analysis/models/: analysis_models.py
backend/analysis/parser/: ast_analyzer.py  import_detector.py
backend/analysis/processors/: file_processor.py  path_processor.py
backend/api/: __init__.py  main.py
backend/api/core/: __init__.py  cache.py  config.py  dependencies.py  security.py  websocket_manager.py
backend/api/db/: models.py  session.py
backend/api/routes/: analysis.py  auth.py  download.py  settings.py  websocket.py
backend/api/schemas/: __init__.py  analysis.py  auth.py  settings.py  sharing.py  user.py
backend/api/services/: export_service.py  sharing_service.py
backend/migrations/: 001_add_sharing.sql
backend/tests/: test_cache.py
backend/tests/fixtures/sample_pyqt_project/: analysis.py  data_processor.py  main.py  main_window.py
frontend/: .env.development  Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: analysis.api.ts  auth.api.ts  client.ts  settings.api.ts  types.ts
frontend/src/hooks/: useAnalysis.ts  (+3 more)
nginx/: nginx.conf
(+17 files in other folders)
