[tool.poetry]
name = "analysis-tool-backend"
version = "1.0.0"
description = "FastAPI backend for Analysis Tool Web Application"
authors = ["Brian <ryun2018@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.34.1"}
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"
pydantic-settings = "^2.7.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["argon2"], version = "^1.7.4"}
argon2-cffi = "^23.1.0"
python-multipart = "^0.0.20"
aiofiles = "^25.1.0"
redis = "^5.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
